result/0618-124400/stderr.log
/home/runner/work/pgi-2025-the_empowered_sparks/pgi-2025-the_empowered_sparks/src/main.c:86:3: error: expected identifier or ‘(’ before ‘else’
   86 | } else if (strncmp(configuration.command, "rotate_cw", 9) == 0) {
      |   ^~~~
/home/runner/work/pgi-2025-the_empowered_sparks/pgi-2025-the_empowered_sparks/src/main.c:94:3: error: expected identifier or ‘(’ before ‘return’
   94 |   return 0;
      |   ^~~~~~
/home/runner/work/pgi-2025-the_empowered_sparks/pgi-2025-the_empowered_sparks/src/main.c:95:1: error: expected identifier or ‘(’ before ‘}’ token
   95 | }
      | ^
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2